# svg-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  bundle.js  converter.rs  index.cjs  index.d.ts  index.min.js  index.mjs  index.ts  package-lock.json  package.json  svg_wasm_bg.wasm  tsconfig.json  types.ts
lib/: index.ts  types.ts
src/: converter.rs
