[package]
name = "svg-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
resvg = { version = "0.36.0", default-features = false, features = [
  "text",
  "raster-images",
] }
svgtypes = "0.12.0"
wasm-bindgen = "0.2.87"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
image-webp = "0.2.1"
image = "0.25.5"

[lib]
crate-type = ["cdylib", "rlib"]

# ref. https://github.com/yisibl/resvg-js
[profile.release]
lto = true    # Enable Link Time Optimization
opt-level = 3
# Setting this to 1 may improve the performance of generated code, but may be slower to compile.
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
